# gira-watcher

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  IDEA.md  LEGAL.md  LICENSE  METHODOLOGY.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy-scraper.yml  deploy-website.yml  infra-apply.yml  release.yml  scrape-fallback.yml
analysis/research/: gira_api_research.md
deploy/: .env.template  README.md  setup.sh  update.sh
deploy/systemd/: gira-detail.service  gira-detail.timer  gira-station.service  gira-station.timer
infra/: .env.example  .terraform.lock.hcl  README.md  justfile  main.tf  outputs.tf  variables.tf  verify.sh  versions.tf
infra/environments/: production.tfvars
infra/modules/cloudflare/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/github/: main.tf  outputs.tf  variables.tf
infra/modules/hetzner/: main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/hetzner/templates/: cloud-init.yml.tftpl
infra/modules/vercel/: main.tf  outputs.tf  variables.tf  versions.tf
